fix media query 300px for image overflow

--- a/less/rvway.less
+++ b/less/rvway.less
@@ -30,6 +30,7 @@
   }
   //Media query 300px - hero section
   @media (min-width: 300px) {
+    height: auto;
     #rvway-title {
       h1 {
         width: 95%;
